k8s/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: learn
