k8s/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn
spec:
  type: ClusterIP
  sessionAffinity: None
