k8s/overlays/prod/ingress-patch.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: learn
spec:
  rules:
    - host: app.dxas90.xyz
      http:
        paths:
          - path: /prod
            pathType: ImplementationSpecific
            backend:
              serviceName: learn
              servicePort: web
